1.8.1
---
- Possibility to buy license keys
- Move object using cursor keys
- Keyframes and transitions are now selectable and can be moved using cursor keys and by dragging with the mouse
- Moving keyframes and transitions is now undoable
- Rulers have been added
- Zoom has been added

1.8
---
- Loading of binary files has been removed

1.7.1
---
- Added the ability to exchange the content of a bitmap
- Bugfix: SVG and Text items now react on width and height keyframes
- Bugfix: Resizing an item has also drawed the seletion rect

1.7
---
- New plugin technology for export added
- New Plugin -> Export HTML
- Rendering text as SVG now for compability to HTML export
- Selection rectangle added

1.6
---
- Saving files is done in XML now only. Binary files can still be readed.
- New plugin technology for items added.
- Animation of scene.brushColor, brushColor, penColor and textColor is now possible

1.5
---
- App icon added
- Cursors for adding items added
- Added a texteditor for SVG
- Added the ability to add svg attributes that can be animated

1.4
---
News-Panel is now able to display html.

Bugfix: Fixed a problem with RPATH in AppImage

1.3
---
Plugins are not supported anymore. 
Reason: It was impossible to compile PythonQt on Windows.

1.2
---
Added the ability to load python plugins for import and export

Bugfix: color editor

1.1
---
Edit easing curve for transition
Font of text objects is now editable
News panel added
Timeline is not limited anymore
Item resizing while shift key pressed centers the item
Playhead can now be repositioned clicking into the new position
Playhead scale has now labels every half a second
Scene or single items can now be exported to XML
Scene and single items can now be imported from XML
PropertyEditor sits now in a scrollarea

Bugfix: now all selected items will be deleted if DEL is pressed
Bugfix: changing Id
Bugfix: changing opacity