@@ -21,6 +21,7 @@
 #include "keyframehandle.h"
 #include "keyframe.h"
 #include "transitionline.h"
+#include "animationscene.h"
 #include <QPainter>
 #include <QMenu>
 
@@ -134,5 +135,19 @@ void KeyframeHandle::keyPressEvent(QKeyEvent *e)
         case Qt::Key_Right:
             emit keyframeMoved(this, m_key->time() + 100);
             break;
+#ifdef TEST
+        case Qt::Key_U:
+        {
+            TransitionLine *tl = dynamic_cast<TransitionLine*>(parent());
+            tl->item()->scene()->undoStack()->undo();
+        }
+        break;
+        case Qt::Key_R:
+        {
+            TransitionLine *tl = dynamic_cast<TransitionLine*>(parent());
+            tl->item()->scene()->undoStack()->redo();
+        }
+        break;
+#endif
     }
 }
