@@ -34,9 +34,6 @@ public:
     TransitionHandle(Transition *parent, KeyFrame *key);
 
     void paintEvent(QPaintEvent *ev) Q_DECL_OVERRIDE;
-    virtual void mousePressEvent(QMouseEvent *ev) Q_DECL_OVERRIDE = 0;
-    virtual void mouseMoveEvent(QMouseEvent *ev) Q_DECL_OVERRIDE = 0;
-    virtual void mouseReleaseEvent(QMouseEvent *ev) Q_DECL_OVERRIDE = 0;
 
 protected:
     void keyPressEvent(QKeyEvent *e) Q_DECL_OVERRIDE;
