@@ -35,6 +35,7 @@ class WIDGETSSHARED_EXPORT TransitionHandleLeft : public TransitionHandle
 public:
     TransitionHandleLeft(Transition *parent, KeyFrame *key);
 
+protected:
     void mousePressEvent(QMouseEvent *ev) Q_DECL_OVERRIDE;
     void mouseMoveEvent(QMouseEvent *ev) Q_DECL_OVERRIDE;
     void mouseReleaseEvent(QMouseEvent *ev) Q_DECL_OVERRIDE;
